# runnt

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
benches/: bench.txt  iterations.rs
examples/: activations.rs  builders.rs  circle.rs  iris.rs  mnist.rs  moons.rs  moons_tui.rs  optimizers.rs  sine.rs  square.rs  xor.rs
src/: activation.rs  dataset.rs  dropout.rs  error.rs  initialization.rs  layer.rs  learning.rs  lib.rs  loss.rs  nn.rs  optimizer.rs  prelude.rs  regularization.rs  sede.rs  tests.rs
