[package]
name = "runnt"
version = "0.8.0"
edition = "2021"
license = "MIT"
description = "Easy Neural Network for machine learning"
repository = "https://github.com/griccardos/runnt/"
readme = "README.md"
keywords = ["reinforcement", "ai", "qlearning", "machinelearning", "learning"]
categories = ["science", "algorithms"]

[dependencies]
fastrand = "2.3" #for random
ndarray = "0.16" #for matrix

[dev-dependencies]
criterion = "0" #for bench
tempfile = "3"  #for test
ratatui = "0.20" #for moons tui example
crossterm = "0.27"  #for moons tui example

[[bench]]
name = "iterations"
harness = false
