[package]
name = "runnt"
version = "0.9.0"
edition = "2024"
license = "MIT"
description = "Easy Neural Network for machine learning"
repository = "https://github.com/griccardos/runnt/"
readme = "README.md"
keywords = ["ai", "neuralnetwork", "machinelearning", "artificialintelligence"]
categories = ["science", "algorithms"]

[dependencies]
fastrand = "2.3" #for random
ndarray = "0.16" #for matrix

[dev-dependencies]
criterion = "0.7.0"  #for bench
tempfile = "3.22.0"  #for test
ratatui = "0.29.0"   #for moons tui example
crossterm = "0.29.0" #for moons tui example

[[bench]]
name = "iterations"
harness = false
